# sechat-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  codecov.yml  deny.toml  rustfmt.toml  typos.toml
.cargo/: audit.toml
.github/workflows/: rust.yml
src/: main.rs
src/backend/: mod.rs  nc_message.rs  nc_notify.rs  nc_request.rs  nc_room.rs  nc_talk.rs
src/backend/nc_request/: mod.rs  nc_req_data_message.rs  nc_req_data_room.rs  nc_req_data_user.rs  nc_req_worker.rs  nc_request_ocs_wrapper.rs  nc_requester.rs
src/config/: mod.rs  theme.rs
src/config/data/: general.rs  mod.rs  notifications.rs  ui.rs
src/config/theme/: mod.rs  options.rs
src/ui/: app.rs  chat_box.rs  chat_selector.rs  help_box.rs  input_box.rs  mod.rs  notifications.rs  terminal_helpers.rs  title_bar.rs  user_styles.rs  users.rs
src/ui/widget/: chat_box.rs  chat_selector.rs  help_box.rs  logger.rs  mod.rs  title_bar.rs  users.rs
test/: config.toml  theme.toml
