[package]
name = "sechat-rs"
description = "A TUI based chat client for Nextcloud Talk"
readme = "README.md"
license-file = "LICENSE"
version = "0.1.0-beta"
edition = "2018"
categories = ["command-line-utilities"]
keywords = ["tui", "nextcloud", "nextcloud-talk"]
authors = ["tofu <sechat@tofuli.de>"]
documentation = "https://github.com/tofubert/sechat-rs"
repository = "https://github.com/tofubert/sechat-rs"
homepage = "https://github.com/tofubert/sechat-rs"
exclude = [
  "assets/*",
  ".github",
  "Makefile.toml",
  "CONTRIBUTING.md",
  "*.log",
  "tags",
]
[[bin]]
name = "sechat"
path = "src/main.rs"


[dev-dependencies]
mockall = { version = "0.13.1" }
mockall_derive = { version = "0.13.1"}
tempfile = "3.14.0"



[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
jzon = "0.12.5"
base64 = "0.22.1"
toml = "0.8.19"
toml-example = "0.12.1"
ratatui = {version = "0.29.0", features = ["serde"] }
crossterm = "*"
tui-tree-widget = "0.23"
futures = "0.3.31"
chrono = "0.4.39"
num-traits = "*"
num-derive = "*"
log = "0.4.22"
notify-rust = "4.11"
itertools = "0.14.0"
clap = { version = "4.5.23", features = ["derive"] }
strum = "0.26.3"
strum_macros = "0.26.4"
textwrap = "0.16.1"
etcetera = "0.8.0"
better-panic = "0.3.0"
color-eyre = "0.6.3"
human-panic = "2.0.2"
libc = "0.2.169"
strip-ansi-escapes = "0.2.0"
tracing = "0.1.41"
cfg-if = "1.0.0"
tui-textarea = "0.7.0"
async-trait = "0.1.83"
serde_with = "3.11.0"
tokio-util = "0.7.13"
tui-logger = { version = "0.14.1", features = ["crossterm" ] }
unicode-width = "0.2.0"


[workspace.lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "deny"

[profile.release]
# Disable debug information.
debug = false

# Strip symbols from the binary
strip = true

# Enable link time optimization (LTO) to remove dead code
lto = true

# Improve size optimization over build time
codegen-units = 1

# Disable debug assertions.
debug-assertions = false

# Disable overflow checks.
overflow-checks = false

# Disable rpath.
rpath = false
