[package]
name = "sechat-rs"
description = "A TUI based chat client for Nextcloud Talk"
readme = "README.md"
license-file = "LICENSE"
version = "0.1.1"
edition = "2018"
categories = ["command-line-utilities"]
keywords = ["tui", "nextcloud", "nextcloud-talk"]
authors = ["tofu <sechat@tofuli.de>"]
documentation = "https://docs.rs/sechat-rs/latest/sechat-rs/"
repository = "https://github.com/tofubert/sechat-rs"
homepage = "https://crates.io/crates/sechat-rs"
exclude = [
  "assets/*",
  ".github",
  "Makefile.toml",
  "CONTRIBUTING.md",
  "*.log",
  "tags",
]
[[bin]]
name = "sechat-rs"
path = "src/main.rs"


[dev-dependencies]
mockall = { version = "=0.13.1" }
mockall_derive = { version = "=0.13.1"}
tempfile = "=3.19.1"



[dependencies]
reqwest = { version = "=0.12.15", features = ["json"] }
tokio = { version = "=1.45.0", features = ["full"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"
jzon = "=0.12.5"
base64 = "=0.22.1"
toml = "=0.8.22"
toml-example = "=0.12.2"
ratatui = {version = "=0.29.0", features = ["serde"] }
crossterm = "=0.29.0"
tui-tree-widget = "=0.23"
futures = "=0.3.31"
chrono = "=0.4.41"
num-traits = "=0.2.19"
num-derive = "=0.4.2"
log = "=0.4.27"
notify-rust = "=4.11"
itertools = "=0.14.0"
clap = { version = "=4.5.37", features = ["derive"] }
strum = "=0.27.1"
strum_macros = "=0.27.1"
textwrap = "=0.16.2"
etcetera = "=0.10.0"
better-panic = "=0.3.0"
color-eyre = "=0.6.4"
human-panic = "=2.0.2"
libc = "=0.2.172"
strip-ansi-escapes = "=0.2.1"
tracing = "=0.1.41"
cfg-if = "=1.0.0"
tui-textarea = "=0.7.0"
async-trait = "=0.1.88"
serde_with = "=3.12.0"
tokio-util = "=0.7.15"
tui-logger = { version = "=0.17.2", features = ["crossterm" ] }


[workspace.lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "deny"

[profile.release]
# Disable debug information.
debug = false

# Strip symbols from the binary
strip = true

# Enable link time optimization (LTO) to remove dead code
lto = true

# Improve size optimization over build time
codegen-units = 1

# Disable debug assertions.
debug-assertions = false

# Disable overflow checks.
overflow-checks = false

# Disable rpath.
rpath = false
